2007-07-09  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Allow group names preceeded by asterisks
	  ('*') in PPD files ("*OpenGroup: ..."/"*CloseGroup: ..." lines).
	  This is needed by the PPD for the KONICA MINOLTA magicolor 5430
	  DL, provided by KONICA MINOLTA and probably also by several
	  other manufacturer-supplied PPD files.

2007-03-08  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Let the PPD files listed in the XML version
	  of the overview also get listed in the Perl version.

2007-03-04  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Improved find_printer() method. Now
	  searches of make and model names do not consider other characters
	  than letters and numbers any more. All other characters are and
	  boundaries between letters and numbers are converted to single
	  spaces.

2007-03-03  Till Kamppeter <till.kamppeter@gmail.com>

	* debian/control: "gimp-print" -> "gutenprint".

2007-02-28  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added new find_printer() method, to find
	  printer entries in the database based on IEEE-1284 device IDs
	  (from printer auto-detection), make/model, make, or model.
	  This is for a new search function on the site and also for
	  finding driver packages by printer setup tools.

	* foomatic-searchprinter.in, configure.ac, Makefile.in: Added
	  simple tool to find printers in the locally installed
	  Foomatic database using the new find_printer() method.

2007-02-26  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c, lib/Foomatic/DB.pm: Let "<obsolete>" tags
	  in driver XML files be read and added to the Perl data structures
	  of driver entries, printer/driver combos, and the overview. Let
	  this info also be put into the PPDs and into the "DRV:" field
	  of the device IDs.

2007-02-24  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Let Perl data structure for driver XML